--- a/views/activity.ejs
+++ b/views/activity.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../reset.css">
+    <link rel="stylesheet" href="../../styles.css">
     <title>Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,23 +24,13 @@
         <% } %> 
     </nav>
     <Header class="page-header">
-        
-        <div class="header-hero ">
-            <div class="container-narrow header-text ">
-                <h2>Meet classmates and make friends through activities.</h2>
-                <h1>Use <mark>Peer Connector!</mark></h1>
-            </div>
-
+        <div class="header-text header-hero">
+            <h1 class="close-text"><%=activity.name%></h1>
         </div>
     </Header>
     <main>
         <section>
-            <div class="container">
-                <h2>About</h2>
-                <p>
-                    Peer Connector is a platform that seeks to connect people within organizations, such as schools and businesses. People should use Peer Connect to build relationships and bond with people that they work or go to school with through activities, such as pickup games, video game tournaments, picnics, and anything else that can be done with a group.
-                </p>
-            </div>
+            
         </section>
     </main>
     <footer>
